2012-08-07  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/bsd/bsd4.4/bits/dirent.h
	[__INO_T_MATCHES_INO64_T] (_DIRENT_MATCHES_DIRENT64): New macro.

2012-08-07  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/configure.in (arch_minimum_kernel):
	Change from 2.6.0 to 2.6.16.
	* sysdeps/unix/sysv/linux/configure: Regenerated.
	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_POSIX_CPU_TIMERS): Define unconditionally.
	(__ASSUME_TGKILL): Define conditional on architectures, not kernel
	version.
	(__ASSUME_UTIMES): Likewise.
	(__ASSUME_CLONE_STOPPED): Remove.
	(__ASSUME_FADVISE64_64_SYSCALL): Define conditional on
	architectures, not kernel version.
	(__ASSUME_PROT_GROWSUPDOWN): Define unconditionally.
	(__ASSUME_NO_CLONE_DETACHED): Likewise.
	(__ASSUME_GETDENTS32_D_TYPE): Likewise.
	(__ASSUME_WAITID_SYSCALL): Likewise.
	[__sparc__ && __arch64__] (__ASSUME_STAT64_SYSCALL): Do not
	condition definition on __LINUX_KERNEL_VERSION >= 0x02060c.
	* README: State 2.6.16 as minimum Linux kernel version.  Do not
	refer to older versions.

2012-08-06  Roland McGrath  <roland@hack.frob.com>

	* dirent/alphasort.c [_DIRENT_MATCHES_DIRENT64]:
	Define alphasort64 as an alias.
	* dirent/versionsort.c [_DIRENT_MATCHES_DIRENT64]:
	Define versionsort64 as an alias.
	* dirent/scandir.c [_DIRENT_MATCHES_DIRENT64]:
	Define scandir64 as an alias.
	* dirent/scandirat.c [_DIRENT_MATCHES_DIRENT64]:
	Define scandirat64 as an alias.
	* dirent/alphasort64.c (alphasort64):
	Conditionalize on [!_DIRENT_MATCHES_DIRENT64].
	* dirent/versionsort64.c: Likewise.
	* dirent/scandir64.c: Likewise.
	* dirent/scandirat64.c: Likewise.
	* sysdeps/wordsize-64/alphasort.c: File removed.
	* sysdeps/wordsize-64/alphasort64.c: File removed.
	* sysdeps/wordsize-64/scandir.c: File removed.
	* sysdeps/wordsize-64/scandir64.c: File removed.
	* sysdeps/wordsize-64/scandirat.c: File removed.
	* sysdeps/wordsize-64/scandirat64.c: File removed.